[package]
name = "user-registration-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }

[dev-dependencies]
tokio-test = "0.4.5"
